# invt-project

./: .env  .flake8  Dockerfile  Dockerfile.pgvector  Makefile  README.md  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_07_24_1811-c58f980ac0bf_faq_init.py
app/: __init__.py  db.py  faq_knowledge_base.csv  main.py  settings.py
app/daos/: base.py  faq.py
app/models/: base.py  faq.py
app/routers/: api_router.py  faq.py
app/schemas/: faq.py
app/services/: faq.py  utils.py
initdb/: 01-init-vector.sql
