[project]
name = "invt-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Luka", email = "scekic.luka@gmail.com" }
]
dependencies = [
    "alembic>=1.13.2",
    "loguru>=0.7.2",
    "fastapi[all]>=0.111.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[cryptography]>=1.7.4",
    "sqlalchemy>=2.0.31",
    "pydantic>=2.8.2",
    "asyncpg>=0.29.0",
    "openai>=1.37.0",
    "pgvector>=0.3.2",
    "flake8>=7.1.0",
    "pre-commit>=3.7.1",
    "black>=24.4.2",
    "isort>=5.13.2",
    "autopep8>=2.3.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/invt_project"]
